# color-shredder-web

./: Cargo.toml  README.md  index.html  styles.css
src/: app.rs  canvas.rs  main.rs  shredder.rs
