[package]
name = "color-shredder"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"] }
wasm-bindgen = { version = "0.2"}
rand = { version = "0.8"}
getrandom = { version = "0.2", features = ["js"] }
