[package]
name = "color-shredder"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3", features = ["OffscreenCanvas", "OffscreenCanvasRenderingContext2d", "CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData", "Window", "ImageBitmap"]}
js-sys = { version = "0.3"}
wasm-bindgen = { version = "0.2"}
wasm-bindgen-futures = { version = "0.4"}
rand = { version = "0.8"}
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.2" }